--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "barryvdh/laravel-snappy": "^1.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.4",
+        "mikehaertl/phpwkhtmltopdf": "^2.5",
         "spatie/browsershot": "^3.58",
         "zordius/lightncandy": "^1.2"
     },
