--- a/composer.json
+++ b/composer.json
@@ -9,11 +9,13 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "ar-php/ar-php": "^1.0",
         "barryvdh/laravel-dompdf": "^2.2",
         "barryvdh/laravel-snappy": "^1.0",
         "fideloper/proxy": "^4.2",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
+        "khaled.alshamaa/ar-php": "^7.0",
         "laravel/framework": "^8.0",
         "laravel/tinker": "^2.0",
         "laravel/ui": "^3.4",
